<resources>
    <string name="about_android">%1$s Android app</string>
    <string name="about_version">version %1$s</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="actionbar_sort_by_name">A-Z</string>
    <string name="actionbar_sort_by_date">Newest - Oldest</string>
    <string name="actionbar_sort_by_size">Biggest - Smallest</string>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_uploads_list">Uploads</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="prefs_about">Fork of the original ownCloud app (GPL)</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage accounts</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_instant_upload">Instant picture uploads</string>
    <string name="prefs_instant_upload_summary">Instantly upload pictures taken by camera</string>
    <string name="prefs_instant_video_upload">Instant video uploads</string>
    <string name="prefs_instant_video_upload_summary">Instantly upload videos recorded by camera</string>
    <string name="prefs_log_title">Enable logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging history</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete history</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_remember_last_share_location">Remember share location</string>
    <string name="prefs_remember_last_upload_location_summary">Remember last share upload location</string>
    <string name="recommend_subject">"Try %1$s on your smartphone!"</string>
    <string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_host_url">Server address https://…</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">New to %1$s?</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_top_message">Choose upload folder</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please set up an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_error_title_no_file_to_upload">No file to upload</string>
    <string name="uploader_error_message_received_piece_of_text">%1$s cannot upload a piece of text as a file.</string>
    <string name="uploader_error_message_no_file_to_upload">Received data do not include any valid file.</string>
    <string name="uploader_error_title_file_cannot_be_uploaded">File cannot be uploaded</string>
    <string name="uploader_error_message_read_permission_not_granted">%1$s is not allowed to read a received file</string>
    <string name="uploader_error_message_source_file_not_found">File to upload was not found in its location. Please check whether the file exists.</string>
    <string name="uploader_error_message_source_file_not_copied">An error occurred while copying the file to a temporary folder. Please try to send again.</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty">Nothing in here. Upload something!</string>
    <string name="file_list_loading">Loading&#8230;</string>
    <string name="file_list_no_app_for_file_type">No app found for file type</string>
    <string name="local_file_list_empty">There are no files in this folder.</string>
    <string name="local_file_list_empty_just_folders">There are no folders in this folder.</string>
    <string name="upload_list_empty">No uploads available.</string>
    <string name="file_list_folder">folder</string>
    <string name="file_list_folders">folders</string>
    <string name="file_list_file">file</string>
    <string name="file_list_files">files</string>
    <string name="filedetails_select_file">Tap on a file to display additional information.</string>
    <string name="filedetails_size">Size:</string>
    <string name="filedetails_type">Type:</string>
    <string name="filedetails_created">Created:</string>
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="filedetails_renamed_in_upload_msg">File was renamed to %1$s during upload</string>
    <string name="list_layout">List layout</string>
    <string name="action_share">Share</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_remove_upload">Remove upload</string>
    <string name="common_retry_upload">Retry upload</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_back">Back</string>
    <string name="common_save_exit">Save &amp; exit</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading &#8230;</string>
    <string name="common_unknown">unknown</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Remove account</string>
    <string name="create_account">Create account</string>
    <string name="upload_chooser_title">Upload from &#8230;</string>
    <string name="uploader_info_dirname">Folder name</string>
    <string name="uploader_upload_in_progress_ticker">Uploading &#8230;</string>
    <string name="uploader_upload_in_progress_content">%1$d%% Uploading %2$s</string>
    <string name="uploader_upload_succeeded_ticker">Upload succeeded</string>
    <string name="uploader_upload_succeeded_content_single">%1$s uploaded</string>
    <string name="uploader_upload_failed_ticker">Upload failed</string>
    <string name="uploader_upload_failed_content_single">Upload of %1$s could not be completed</string>
    <string name="uploader_upload_failed_credentials_error">Upload failed, you need to log in again</string>
    <string name="uploader_upload_failed_ssl_certificate_not_trusted">Server certificate is not trusted</string>
    <string name="uploader_upload_text_dialog_title">Insert a name for the new file</string>
    <string name="uploader_upload_text_dialog_filename_error_empty">Filename must not be empty</string>
    <string name="uploader_upload_text_dialog_filename_error_length_max">Filename must not be more than %d characters</string>
    <string name="uploader_upload_text_filename_hint">Filename</string>
    <string name="ssl_certificate_not_trusted">Server certificate is not trusted</string>
    <string name="uploads_view_title">Uploads</string>
    <string name="uploads_view_group_current_uploads">Current</string>
    <string name="uploads_view_group_failed_uploads">Failed (tap to retry)</string>
    <string name="uploads_view_group_finished_uploads">Uploaded</string>
    <string name="uploads_view_group_file_count">%d Files</string>
    <string name="uploads_view_group_file_count_single">%d File</string>
    <string name="uploads_view_upload_status_succeeded">Completed</string>
    <string name="uploads_view_upload_status_cancelled">Cancelled</string>
    <string name="uploads_view_upload_status_paused">Paused</string>
    <string name="uploads_view_upload_status_failed_connection_error">Connection error</string>
    <string name="uploads_view_upload_status_failed_retry">Upload will be retried shortly</string>
    <string name="uploads_view_upload_status_failed_credentials_error">Credentials error</string>
    <string name="uploads_view_upload_status_failed_folder_error">Folder error</string>
    <string name="uploads_view_upload_status_failed_file_error">File error</string>
    <string name="uploads_view_upload_status_failed_localfile_error">Local file not found</string>
    <string name="uploads_view_upload_status_failed_permission_error">Permission error</string>
    <string name="uploads_view_upload_status_failed_firewall_error">Forbidden due to a firewall rule</string>
    <string name="uploads_view_upload_status_conflict">Conflict</string>
    <string name="uploads_view_upload_status_service_interrupted">App was terminated</string>
    <string name="uploads_view_upload_status_unknown_fail">Unknown error</string>
    <string name="uploads_view_upload_status_waiting_for_wifi">Waiting for wifi connectivity</string>
    <string name="uploads_view_later_waiting_to_upload">Waiting to upload</string>
    <string name="downloader_download_in_progress_ticker">Downloading &#8230;</string>
    <string name="downloader_download_in_progress_content">%1$d%% Downloading %2$s</string>
    <string name="downloader_download_succeeded_ticker">Download succeeded</string>
    <string name="downloader_download_succeeded_content">%1$s downloaded</string>
    <string name="downloader_download_failed_ticker">Download failed</string>
    <string name="downloader_download_failed_content">Download of %1$s could not be completed</string>
    <string name="downloader_not_downloaded_yet">Not downloaded yet</string>
    <string name="downloader_download_failed_credentials_error">Download failed, you need to log in again</string>
    <string name="downloader_download_forbidden_permissions">to download this file</string>
    <string name="common_choose_account">Choose account</string>
    <string name="sync_fail_ticker">Sync failed</string>
    <string name="sync_fail_ticker_unauthorized">Sync failed, you need to log in again</string>
    <string name="instant_upload_on_wifi">Upload pictures via wifi only</string>
    <string name="instant_video_upload_on_wifi">Upload videos via wifi only</string>
    <string name="prefs_instant_upload_path_title">Upload path</string>
    <string name="prefs_category_instant_uploading">Instant uploads</string>
    <string name="prefs_category_details">Details</string>
    <string name="prefs_instant_video_upload_path_title">Upload video path</string>
    <string name="prefs_instant_upload_source_path_title">Camera folder (%1$s)</string>
    <string name="prefs_instant_behaviour_dialogTitle">Original file will be...</string>
    <string name="prefs_instant_behaviour_title">Original file will be...</string>
</resources>