<?xml version="1.0" encoding="utf-8"?>
<!--
  ownCloud Android client application
  Copyright (C) 2012  Bartek Przybylski
  Copyright (C) 2016 ownCloud GmbH.
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/prefs_category_instant_uploading"
        android:key="instant_uploading_category"
        >
        <com.joshuaglenlee.ownclient.ui.CheckBoxPreferenceWithLongTitle
            android:key="instant_uploading"
            android:title="@string/prefs_instant_upload"
            android:summary="@string/prefs_instant_upload_summary"
            />
        <com.joshuaglenlee.ownclient.ui.PreferenceWithLongSummary
            android:title="@string/prefs_instant_upload_path_title"
            android:key="instant_upload_path"
            />
        <com.joshuaglenlee.ownclient.ui.CheckBoxPreferenceWithLongTitle
            android:title="@string/instant_upload_on_wifi"
            android:key="instant_upload_on_wifi"
            />
        <com.joshuaglenlee.ownclient.ui.CheckBoxPreferenceWithLongTitle
            android:key="instant_video_uploading"
            android:title="@string/prefs_instant_video_upload"
            android:summary="@string/prefs_instant_video_upload_summary"
            />
        <com.joshuaglenlee.ownclient.ui.PreferenceWithLongSummary
            android:title="@string/prefs_instant_video_upload_path_title"
            android:key="instant_video_upload_path"
            />
        <com.joshuaglenlee.ownclient.ui.CheckBoxPreferenceWithLongTitle
            android:title="@string/instant_video_upload_on_wifi"
            android:key="instant_video_upload_on_wifi"
            />
        <com.joshuaglenlee.ownclient.ui.PreferenceWithLongSummary
            android:title="@string/prefs_instant_upload_source_path_title"
            android:key="instant_upload_source_path"
            />
        <com.joshuaglenlee.ownclient.ui.dialog.OwnCloudListPreference
            android:key="prefs_instant_behaviour"
            android:dialogTitle="@string/prefs_instant_behaviour_dialogTitle"
            android:title="@string/prefs_instant_behaviour_title"
            android:entries="@array/pref_behaviour_entries"
            android:entryValues="@array/pref_behaviour_entryValues"
            android:defaultValue="NOTHING"
            android:summary="%s"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_category_details">
        <android.preference.CheckBoxPreference
            android:title="@string/prefs_passcode"
            android:key="set_pincode"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_category_more"
        android:key="more"
        >
        <Preference
            android:title="@string/about_title"
            android:id="@+id/about_app"
            android:key="about_app"
            />
    </PreferenceCategory>


</PreferenceScreen>
